# incstd

./: .clangd  .gitignore  CMakeLists.txt  CMakePresets.json  CMake_dependencies.cmake  LICENSE  README.md
cmake/incom/modules/: FindxxHash.cmake
cmake/modules/: FindxxHash.cmake
demos/: CMakeLists.txt  demo.cpp
incl/: incstd.hpp  incstd_all.hpp  incstd_console.hpp
incl/incstd/: algos.hpp  argpack.hpp  concepts.hpp  containers.hpp  filesys.hpp  hashing.hpp  incstd_all.hpp  incstd_color.hpp  incstd_console.hpp  incstd_core.hpp  incstd_web.hpp  numeric.hpp  sequences.hpp  typegen.hpp  variant_utils.hpp  views.hpp
incl/incstd/_vendor/blackbird/: blackbird_combinators.hpp
incl/incstd/color/: color_common.hpp  pigment.hpp
incl/incstd/console/: ansi2html.hpp  ansi_sequences.hpp  colorschemes.hpp  common.hpp  console_colors.hpp  console_common.hpp  query.hpp
incl/incstd/core/: algos.hpp  argpack.hpp  buffers.hpp  combinators.hpp  concepts.hpp  containers.hpp  coroutines.hpp  explorers.hpp  filesys.hpp  hashing.hpp  matrix.hpp  numeric.hpp  parsers.hpp  random.hpp  sequences.hpp  solvers.hpp  typegen.hpp  variant_utils.hpp  views.hpp
incl/incstd/polyfills/: mdspan.hpp
incl/incstd/web/: uri.hpp
incl/mspan/: mdspan
include/: incstd.hpp
include/incstd/: buffers.hpp  concepts.hpp  matrix.hpp  parsers.hpp  sequences.hpp  typegen.hpp  views.hpp
